changed the border and paddings to fix alignment

--- a/styles/account.css
+++ b/styles/account.css
@@ -1,3 +1,9 @@
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 .payment__option {
     display: flex;
     width: 400px;
