--- a/styles/cult.css
+++ b/styles/cult.css
@@ -1,7 +1,6 @@
 html,
 body {
   font-family: "Roboto", sans-serif;
-  height: 200vh;
   margin: 0;
   padding: 0;
 }
