--- a/styles/curefitOnlinePT.css
+++ b/styles/curefitOnlinePT.css
@@ -1,6 +1,8 @@
+html,
 body {
+  font-family: "Roboto", sans-serif;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  padding: 0;
 }
 
 #fitstart {
