--- a/styles/gear.css
+++ b/styles/gear.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
-
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: "Nunito", sans-serif;
 }
