--- a/styles/gearInfo.css
+++ b/styles/gearInfo.css
@@ -1,3 +1,9 @@
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 @import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 .store {
   font-family: "Nunito", sans-serif;
