--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,3 +1,9 @@
+html,
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 .container {
   display: flex;
   margin-top: 30px;
